day2/bgg-iss-app-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
   name: iss-bgg-app-deployment-v2
   namespace: my-namespace

spec:
   replicas: 2
   selector:
      matchLabels: 
         name: stackupiss-app-db

   template:
      metadata:
         name:    
         labels:
            name: stackupiss-app-db
            version: "v2"
            owner: iss-danialchanee
      spec:
         containers:
         - name: fortune
           image: stackupiss/bgg-app:v2
           imagePullPolicy: Always
           ports:
           - name: bgg-app-port
             containerPort: 3000

---

apiVersion: v1
kind: Service

metadata:
  name: bgg-app-svc-v2
  namespace: my-namespace
  labels:
    name: bgg-app-svc-v2
  
spec:
  type: ClusterIP
  selector:
    name: stackupiss-app-db
    version: "v2"
  ports:
  - name: bgg-app-port-svc
    port: 8080
    targetPort: bgg-app-port
